--- a/test.html
+++ b/test.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>practice</title>
+    <title>Document</title>
 </head>
 <body>
-    <p>sarah</p>
-    <p>here i wanna make a breach from mai breach as a test so now i commit it</p>
+    <p>this a test folder just for test</p>
 </body>
 </html>
