added name and list in two file

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <p>sarah</p>
     <p>here i wanna make a breach from mai breach as a test so now i commit it</p>
+    <!-- added name in p tag -->
+    <p>im mohammad hossein</p>
 </body>
 </html>
