--- a/test.html
+++ b/test.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <p>this a test folder just for test</p>
+    <!-- this is a list for test -->
+    <ol>
+        <li>one <sup>[1]</sup></li>
+        <li>two <sup>[2]</sup></li>
+        <li>three <sup>[3]</sup></li>
+        <li>four <sup>[4]</sup></li>
+    </ol>
 </body>
 </html>
