--- a/practice/toturial.html
+++ b/practice/toturial.html
@@ -14,7 +14,7 @@
         <br>
         <br>
         <br>
-        <img src="../image/The-role-CSS-played-for-the-website-of-bonus-zonder-storting-casino.jpg" alt="css" class="img">
+        <img src="./img/The-role-CSS-played-for-the-website-of-bonus-zonder-storting-casino.jpg" alt="css" class="img">
         </section>
     </header>
     <br>
