--- a/practice/toturial.html
+++ b/practice/toturial.html
@@ -26,8 +26,10 @@
         <section class="border3">
             <p>An example for border-style</p>
         </section >
+        <!-- border-width / font-size -->
         <div id="lorem">
-            <pre class="border-width">
+            <p>
+                <pre class="border-width">
                 <br>
                 Lorem, ipsum dolor sit 
                 amet consectetur 
@@ -35,13 +37,15 @@
                 esse commodi eligendi nihil 
                 quis similique beatae dolorum 
                 nostrum doloribus!
-            </pre>
+                </pre>
+            </p>
         </div>
         <br>
         <div class="arrow"></div>
         <p class="arrows"> These are CSS Triangle (arrow)</p>
         <div class="arrow1"></div>
         <div class="arrow2"></div>
+        <div class="arrow3"></div>
         <br><br>
         <section class="border4">
             <span class="border5">
