<p>changed to<span>

--- a/practice/toturial.html
+++ b/practice/toturial.html
@@ -42,7 +42,7 @@
         </div>
         <br>
         <div class="arrow"></div>
-        <p class="arrows"> These are CSS Triangle (arrow)</p>
+        <span class="arrows"> These are CSS Triangle (arrow)</span>
         <div class="arrow1"></div>
         <div class="arrow2"></div>
         <div class="arrow3"></div>
