--- a/html/toturial.html
+++ b/html/toturial.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>css practice</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,7 @@
     <header>
         <h1 id="header">This is a page to practice CSS</h1>
         <section id="header-img">
-        <img src="./img/The-role-CSS-played-for-the-website-of-bonus-zonder-storting-casino.jpg" alt="css" class="img">
+        <img src="../img/The-role-CSS-played-for-the-website-of-bonus-zonder-storting-casino.jpg" alt="css" class="img">
         </section>
     </header>
     <main>
@@ -69,7 +69,8 @@
                 <li class=""></li>
             </ol>
         </section>
-
+        <img src="" alt="">
+<a href="google.com" class="text-decoration">google</a>
     </main>
 </body>
 </html>
