--- a/html/toturial.html
+++ b/html/toturial.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <h1>Hello my friend</h1>
     <header>
         <h1 id="header">This is a page to practice CSS</h1>
         <section id="header-img">
